// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header default props renders correctly 1`] = `
<WithStyles(ForwardRef(AppBar))
  className=""
  position="fixed"
>
  <WithStyles(ForwardRef(Toolbar))
    disableGutters={true}
  />
</WithStyles(ForwardRef(AppBar))>
`;

exports[`Header hasSidebar = true isSidebarOpen = false renders correctly 1`] = `
<WithStyles(ForwardRef(AppBar))
  className=""
  position="fixed"
>
  <WithStyles(ForwardRef(Toolbar))
    disableGutters={true}
  >
    <WithStyles(ForwardRef(IconButton))
      aria-label="sometext"
      className=""
      color="inherit"
      onClick={[MockFunction]}
    >
      <MenuIcon />
    </WithStyles(ForwardRef(IconButton))>
  </WithStyles(ForwardRef(Toolbar))>
</WithStyles(ForwardRef(AppBar))>
`;
